--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ body {
   padding: 0;
 }
 .main {
-  width: 1000px;
+  max-width: 1000px;
   margin: 60px auto 30px;
   padding: 60px;
   background: #fff;
@@ -163,9 +163,14 @@ body {
 .projectbox p {
   margin-top: 10px;
 }
-.projectbox span{
+.projectbox .smalltitle{
   font-size: 16px;
   color: #ff6700;
+}
+.projectbox .detail {
+  font-size: 16px;
+  font-weight: bold;
+  color: #333;
 }
 .projectbox label {
   display: inline-block;
