--- a/css/main.css
+++ b/css/main.css
@@ -144,12 +144,12 @@ body {
   margin-right: 10px;
   margin-bottom: 5px;
 }
-#color1 {
+.skills1 {
   background-color: #dff0d8;
   border: 1px solid #d6e9c6;
   color: #3c763d;
 }
-#color2 {
+.skills2 {
   background-color: #fcf8e3;
   border: 1px solid #faebcc;
   color: #8a6d3b;
