--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url('../images/soft_wallpaper.png');
+  /*background-image: url('../images/soft_wallpaper.png');*/
   font: 14px '微软雅黑',sans-serif;
   margin: 0;
   padding: 0;
